--- a/package.json
+++ b/package.json
@@ -5,30 +5,26 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "concurrently": "^1.0.0",
+    "del": "^2.2.0",
+    "gulp": "^3.8.8"
+  },
+  "dependencies": {
+    "angular2": "2.0.0-beta.0",
     "bootstrap": "^3.3.7",
     "bootstrap-daterangepicker": "^2.1.25",
     "bootstrap-datetimepicker-npm": "^4.17.37-npm",
     "bootstrap-sass": "^3.3.7",
     "font-awesome": "^4.7.0",
-    "gulp": "^3.9.1",
-    "jquery": "^3.1.0",
-    "laravel-elixir": "^6.0.0-9",
-    "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@angular/animations": "^4.0.0",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.2.0",
-    "systemjs": "^0.19.47",
-    "zone.js": "^0.8.5",
-    "typescript": "^2.2.2"
-  },
-  "dependencies": {}
+    "elixir-typescript": "^1.1.2",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "laravel-elixir": "^4.0.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "systemjs": "0.19.6",
+    "zone.js": "0.5.10",
+
+  }
 }
