--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "bootstrap-daterangepicker": "^2.1.25",
     "bootstrap-datetimepicker-npm": "^4.17.37-npm",
     "bootstrap-sass": "^3.3.7",
-    "font-awesome": "^4.7.0",
-    "lodash": "^4.16.2",
     "elixir-typescript": "^1.1.2",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
+    "font-awesome": "^4.7.0",
     "laravel-elixir": "^4.0.0",
+    "laravel-elixir-webpack-official": "^1.0.10",
+    "lodash": "^4.16.2",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.0",
     "systemjs": "0.19.6",
-    "zone.js": "0.5.10",
-
+    "zone.js": "0.5.10"
   }
 }
